--- a/style.css
+++ b/style.css
@@ -78,13 +78,14 @@ body .header-nav{
 .logo{
     border-radius: 50%;
 }
-#header{
+#header, #about-header{
     position: fixed;
     width: 100%;
     /* left: 0; */
     top: 0;
     z-index: 999;
 }
+/* #about-header */
 .bgcolor{
     background-color: #fff;
 }
@@ -110,6 +111,9 @@ body .header-nav{
     position: relative;  
     
 }
+.about-navbar li{
+    position: relative;
+}
 .navBar .marsh{
     display: none;
 }
@@ -124,10 +128,25 @@ body .header-nav{
     color: #000;
 }
 .navbar li a:hover,
+.about-navbar li a:hover,
 .navbar li a.active1{
     color: #088178;
     /* text-decoration: ; */
 }
+.about-navbar li a.active1{
+    color: #088178;
+}
+.about-navbar li a.active1::after,
+.about-navbar li a:hover::after{
+    content: '';
+    width: 35%;
+    height: 3px;
+    background: #088178;
+    position: absolute;
+    bottom: -5px;
+    left: 10px;
+}
+/* .about-navbar li a:hover::after, */
 .navbar li a.active1::after,
 .navbar li a:hover::after{
     content: '';
@@ -145,18 +164,27 @@ body .header-nav{
     font-size: 16px;
     font-weight: 600;
 }
+.about-dropbtn{
+    color: #000;
+    border: none;
+    font-size: 16px;
+    font-weight: 600;
+    background: transparent;
+    margin-top: -7px;
+    padding-top: 10px;
+}
 .dropdown{
     position: relative;
     /* top: 4px; */
     display: inline-block;
 }
-.dropbtn:hover{
+.dropbtn:hover, .about-dropbtn:hover{
     color: #088178 !important;
 }
 .dropdown-content{
     display: none;
     position: absolute;
-    top: 28px;
+    top: 20px;
     background-color: #fff;
     min-width: 190px;
     min-height: 130px;
@@ -682,6 +710,104 @@ div.login p{
 }
 /* login page end */
 /* media Query  width 799*/
+/* About page styling */
+div.about-desc{
+    display: block;
+    margin: auto;
+    padding: 30px;
+    margin-top: 80px;
+}
+div.about-desc div.about-des{
+    /* color: #ddd; */
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+div.about-desc div.about-des h1{
+    text-align: center;
+    color: #06735a;
+}
+div.about-desc div.about-des p{
+    color: #969494;
+    text-align: center;
+}
+div.about-desc div.delive-info h1{
+    text-align: center;
+    color: #06735a;
+}
+div.about-desc div.delive-info p{
+    color: #969494;
+    text-align: center;
+}
+div.about-desc div.privacy-info h1{
+    text-align: center;
+    color: #06735a;
+}
+div.about-desc div.privacy-info p{
+    color: #969494;
+    text-align: center;
+}
+div.about-header-nav{
+    /* background-color: white; */
+    background-color: #fff !important;
+    /* -webkit-transition: background-color 1s ease-out;
+    -moz-transition: background-color 1s ease-out;
+    -o-transition: background-color 1s ease-out;
+    transition: background-color 1s ease-out; */
+    /* position: absolute; */
+    
+}
+section#about-header{
+    /* box-shadow: 5 5px 15px rgba(0, 0, 0, 0.06); */
+
+}
+div.about-navbar1 div.about-heading{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 80px;
+}
+.about-heading ul{
+    display: flex;
+    flex-direction: row;
+}
+/* .dropdown{
+    padding-top: -3px;
+} */
+/* .dropdown .dropbtn{
+    color: #000;
+} */
+/* .dropdown .dropbtn:hover{ */
+    /* color: #088178; */
+    /* width: 8px; */
+    /* color: #088178; */
+    /* height: 2px; */
+/* } */
+/* .dropdown .dropbtn:hover::after{ */
+    /* width: 8px; */
+    /* color: #088178; */
+    /* height: 2px; */
+/* } */
+/* .about-heading { */
+    /* padding-top: 24px; */
+/* } */
+.about-heading .about-navbar{
+    padding-top: 14px;
+}
+.about-heading ul li{
+    list-style: none;
+    /* color: #000; */
+    padding: 4px 8px;
+}
+.about-heading ul li a{
+    color: #000;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.about-heading .marsh{
+    display: none;
+}
+/* About page styling end */
 @media (max-width: 1086px){
     .hero{
         padding-top: 160px;
