--- a/style.css
+++ b/style.css
@@ -182,12 +182,17 @@ body .header-nav{
 .dropbtn:hover, .about-dropbtn:hover{
     color: #088178 !important;
 }
-.dropdown-content{
+
+.dropdown-pad{
     display: none;
     position: absolute;
     top: 20px;
+    padding: 10px 10px 10px 10px;
+    left: -45%;
+    appearance: none;
     background-color: #fff;
-    min-width: 190px;
+    min-width: 150px;
+    /* margin-right: 50px; */
     min-height: 130px;
     /* padding: 4px; */
     box-shadow: 0px 8px  16px 0px rgba(0, 0, 0, 0.2);
@@ -196,14 +201,14 @@ body .header-nav{
     border-bottom-right-radius: 10px;
 
 }
-.dropdown:hover .dropdown-content{
+.dropdown:hover .dropdown-pad{
     display: block;
     /* transition: .6s all; */
 
     /* color: #088178; */
 }
 .dropdown-content span{
-    color: #000;
+    color: #5c5b5b;
     padding: 4px 4px;
     display: block;
 }
@@ -213,12 +218,23 @@ body .header-nav{
     border: none;
     background-color: transparent;
 }
+.dropdown-content h2{
+    /* text-align: center; */
+    font-size: 20px;
+}
+.dropdown-content h4, .dropdown-content h2{
+    color: #000;
+    padding: 0 0 0 5px;
+    font-size: 15px;
+}
 .dropdown-content a.ed{
     text-align: left;
     display: block;
     text-decoration: none;
-    padding: 4px;
-    color: #088178;
+    padding: 8px;
+    color: #fff;
+    margin-bottom: 4px;
+    background-color: #088178;
 }
 .dropdown-content a.sin{
     display: block;
@@ -229,7 +245,7 @@ body .header-nav{
     border-top: #fc5757 1px solid;
     border-bottom: #f73a3a 1px solid;
     border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    /* border-bottom-right-radius: 10px; */
 }
 .hero{
     display: flex;
@@ -337,6 +353,10 @@ body .header-nav{
     grid-gap: 9px;
     /* justify-content: space-between; */
     /* flex-wrap: wrap; */
+}
+.pro a{
+    text-decoration: none;
+    color: #000;
 }
 .product1 .pro{
     width: 10%;
@@ -738,7 +758,7 @@ div.login p{
 div.about-desc{
     display: block;
     margin: auto;
-    padding: 30px;
+    padding: 100px;
     margin-top: 80px;
 }
 div.about-desc div.about-des{
@@ -752,7 +772,9 @@ div.about-desc div.about-des h1{
 }
 div.about-desc div.about-des p{
     color: #969494;
-    text-align: center;
+    text-align: left;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 div.about-desc div.delive-info h1{
     text-align: center;
@@ -760,7 +782,9 @@ div.about-desc div.delive-info h1{
 }
 div.about-desc div.delive-info p{
     color: #969494;
-    text-align: center;
+    text-align: left;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 div.about-desc div.privacy-info h1{
     text-align: center;
@@ -768,7 +792,9 @@ div.about-desc div.privacy-info h1{
 }
 div.about-desc div.privacy-info p{
     color: #969494;
-    text-align: center;
+    text-align: left;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 div.about-header-nav{
     /* background-color: white; */
@@ -780,10 +806,10 @@ div.about-header-nav{
     /* position: absolute; */
     
 }
-section#about-header{
+/* section#about-header{ */
     /* box-shadow: 5 5px 15px rgba(0, 0, 0, 0.06); */
 
-}
+/* } */
 div.about-navbar1 div.about-heading{
     display: flex;
     justify-content: space-between;
@@ -950,6 +976,108 @@ div.about-navbar1 div.about-heading{
     color: #000;
 }
 /* edit user */
+/* view product */
+.space{
+    padding: 20px 40px 0 60px;
+}
+.viewproduct{
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-auto-rows: minmax(450px, auto);
+    width: 100%;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.02), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+/* .viewproduct div{ */
+    /* padding: 60px; */
+    /* width: 100%; */
+/* } */
+.viewproduct .viewimg{
+    background-color: #fff;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+.viewproduct .viewimg img{
+    width: 100%;
+    object-fit: contain;
+}
+.viewproduct .viewimg .item-name {
+    padding: 26px 0 0 0;
+}
+.viewproduct .viewimg .item-name h5{
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Times New Roman';
+}
+.viewproduct .viewdetail{
+    background-color: #fff;
+    grid-column-start: 3;
+    grid-column-end: 8;
+    padding: 35px 25px 0 35px;
+}
+.viewproduct .viewdetail h4{
+    color: #000;
+}
+.viewproduct .viewdetail .vendor-detail{
+    position: relative;
+    top: 19%;
+}
+.viewproduct .viewdetail .complete{
+    margin-top: 120px;
+    display: flex;
+    justify-content: space-between;
+}
+.viewproduct .viewdetail .complete .complete-btn{
+    display: flex;
+    /* gap: 7px; */
+}
+.viewproduct .viewdetail .complete .complete-btn button{
+    background-color: #fff;
+    border: #ddd 1px solid;
+    padding: .2px 8px;
+    font-size: 19px;
+    cursor: pointer;
+}
+.viewproduct .viewdetail .complete .complete-btn span.quan-name{
+    padding-top: 4px;
+    padding-right: 5px;    
+}
+.viewproduct .viewdetail .complete .complete-btn span.quan{
+    background-color: #606063;
+    /* width: 100%; */
+    padding: 4px 10px 0 10px;
+}
+.viewproduct .viewdetail .purchase-cart{
+    text-align: center;
+    display: flex;
+    gap: 20px;
+    margin-top: 35px;
+    margin-left: 200px;
+    /* justify-content: space-between; */
+}
+.viewproduct .viewdetail .purchase-cart button{
+    padding: 15px;
+    cursor: pointer;
+    border-radius: 35px;
+    font-size: 19px;
+    background-color: #088178;
+    outline: none;
+    border: #088178 1px solid;
+}
+.viewproduct .viewdetail .purchase-cart button:hover{
+    box-shadow: 4px 4px 8px 4px rgba(10, 9, 9, 0.02);
+    opacity: .7;
+}
+.viewproduct .viewdetail .purchase-cart button a{
+    text-decoration: none;
+    color: #fff;
+}
+.viewproduct .viewdetail .purchase-cart button:first-child{
+    padding: 15px 75px;
+}
+/* view product */
 /* About page styling end */
 @media (max-width: 1086px){
     .hero{
