--- a/style.css
+++ b/style.css
@@ -1071,23 +1071,24 @@ div.about-navbar1 div.about-heading{
     margin-left: 200px;
     /* justify-content: space-between; */
 }
-.viewproduct .viewdetail .purchase-cart button{
+.viewproduct .viewdetail .purchase-cart input[type="submit"]{
     padding: 15px;
     cursor: pointer;
     border-radius: 35px;
     font-size: 19px;
     background-color: #088178;
     outline: none;
+    color: #fff;
     border: #088178 1px solid;
 }
-.viewproduct .viewdetail .purchase-cart button:hover{
+.viewproduct .viewdetail .purchase-cart input[type="submit"]:hover{
     box-shadow: 4px 4px 8px 4px rgba(10, 9, 9, 0.02);
     opacity: .7;
 }
-.viewproduct .viewdetail .purchase-cart button a{
+/* .viewproduct .viewdetail .purchase-cart button a{
     text-decoration: none;
     color: #fff;
-}
+} */
 .viewproduct .viewdetail .purchase-cart button:first-child{
     padding: 15px 75px;
 }
@@ -1268,6 +1269,56 @@ div.about-navbar1 div.about-heading{
     padding: 15px 9px;
 }
 /* --------------------for order  end---------------------- */
+/* --------------------receipt---------------------- */
+.receipt{
+    position: absolute;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    background-color: #fff;
+    padding: 10px;
+    height: 400px;
+    border: 1px solid #000;
+}
+.receipt button{
+    position: relative;
+    left: 60%;
+    top: -40%;
+    padding: 20px 5px;
+    cursor: pointer;
+    background-color: #088178;
+    color: #fff;
+    outline: none;
+    border: none;
+    transition: all 400ms ease-out;
+}
+.receipt button:hover{
+    opacity: .7;
+}
+.receipt h1{
+    text-align: center;
+    letter-spacing: .4rem;
+    font-family: 'Times New Roman';
+    color: #000;
+}
+.receipt .order-info{
+    display: flex;
+    margin-top: 30px;
+    text-align: center;
+    flex-direction: column;
+}
+.shif{
+    display: flex;
+    margin-top: 10px;
+    flex-direction: column;
+    text-align: center;
+}
+.receipt .prod-info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+/* --------------------receipt  end---------------------- */
 /* view product */
 /* About page styling end */
 @media (max-width: 1086px){
